# python_junk

./: .gitignore  000-run-jupyter.bat  Learn Python in One Day and Learn It Well.ipynb  ML0101EN-Reg-Polynomial-Regression-Co2-py-v1.ipynb  README.md  Untitled1.ipynb  capstone_supplement.ipynb  class_constructor.ipynb  convolutions.ipynb  convolutions2.ipynb  date-time-calendar.ipynb  encodings.ipynb  headq_junk.ipynb  images.ipynb  just_junk.ipynb  ml_junk.ipynb  redirect_stdout.ipynb  yyk_sine_regression.ipynb
docs/: .gitignore
docs/source/: conf.py  index.rst
embedded/: .gitignore  CMakeLists.txt  foo.py  globalmapper.cpp  globalmappermodule.cpp  multiply.py  pure_embedding.cpp  pure_embedding2.cpp  spam-setup.py.template  spammodule.cpp  test_numarg.py  time_parse.cpp  very_high_level.cpp  xxmodule.c
embedded/Mapper/: AAA_README.md  CMakeLists.txt  ControlCenter.cpp  ControlCenter.h  Mapper.cpp  Mapper.h  MapperMain.cpp  mappermodule.i  mappermodule_test.cpp
embedded/py_samples/: multiply.py  test_numarg.py
embedded/swig_examples/: .gitignore  CMakeLists.txt
embedded/swig_examples/callback/: CMakeLists.txt  example_callback_test.cpp
embedded/swig_examples/class/: CMakeLists.txt  example_class_test.cpp  runme.py
embedded/swig_examples/class2/: CMakeLists.txt  example.h  example_class2_test.cpp
embedded/swig_examples/constants/: CMakeLists.txt  example_constants_test.cpp
embedded/swig_examples/contract/: CMakeLists.txt
embedded/swig_examples/docstrings/: CMakeLists.txt
embedded/swig_examples/enum/: CMakeLists.txt  example.cxx  example.h  runme.py
embedded/swig_examples/exception/: CMakeLists.txt
embedded/swig_examples/exceptproxy/: CMakeLists.txt
embedded/swig_examples/extend/: CMakeLists.txt
embedded/swig_examples/funcptr/: CMakeLists.txt
embedded/swig_examples/funcptr2/: CMakeLists.txt
embedded/swig_examples/functor/: CMakeLists.txt
embedded/swig_examples/import/: CMakeLists.txt  bar.py  example_import_test.cpp  runme.py
embedded/swig_examples/multimap/: CMakeLists.txt
embedded/swig_examples/operator/: CMakeLists.txt
embedded/swig_examples/pointer/: CMakeLists.txt  example.c  example.h  example.i  runme.py
embedded/swig_examples/pointer2/: CMakeLists.txt  example.c  example.cpp  example.h  example.i  example_pointer2_test.cpp  runme.py
embedded/swig_examples/reference/: CMakeLists.txt
embedded/swig_examples/simple/: CMakeLists.txt  example_simple_test.cpp  runme.py
embedded/swig_examples/smartptr/: CMakeLists.txt
embedded/swig_examples/std_map/: CMakeLists.txt  example.i  runme.py
embedded/swig_examples/std_vector/: CMakeLists.txt  example.h  example.i  runme.py
embedded/swig_examples/template/: CMakeLists.txt
embedded/swig_examples/varargs/: CMakeLists.txt
embedded/swig_examples/variables/: CMakeLists.txt
globals/: GM.py  gm.py  test_GM.py  test_gm.py
nano/: README.txt  moisture.bat  nanoget.ipynb  nanoget.py  plot_basement_temperature.ipynb  tempara4a.py
pandas_tutorial/: 03_subset_data.ipynb  Comparison_with_SQL.ipynb
pycparser/: primer01.ipynb
pynanoget/: pynanoget.ipynb
reloading/: .gitignore  10_Supervised_Algorithms.ipynb  abbreviations.csv  abbreviations.ipynb  abbreviations.txt  from_google.ipynb  lee_dataset_transformations.ipynb  pandas_junk.ipynb  ppf_table.csv  reloading.ipynb  reloading_utils.py  verify_data.ipynb
reloading/data/: reloading_data - 357 magnum.csv  reloading_data - 38 special.csv  reloading_data - 9mm parabellum.csv  reloading_data - CATRIDGES.csv  reloading_data - powder burning rate chart.csv
sphinx/docs/source/: conf.py  index.rst
statistics_for_dummies/: Binomial_distribution.ipynb
unittest/: all_tests.py  t1.py  t2.py
